updating build instructions in README